# databall

./: .gitignore  .pre-commit-config.yaml  .pyup.yml  LICENSE  Pipfile  README.md  full_name.txt  index.md  pyproject.toml  scrapy.cfg  scrapy_commands_covers.txt
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml  gh-pages.yml  main.yml
_includes/: head.html  navigation.html  pagination.html
_layouts/: page.html
_pages/: 404.md  data-exploration.md  feature-selection.md  model-performance.md  outline.md  parameter-tuning.md  performance-comparison.md  stats.md
covers/: items.py  loaders.py  pipelines.py  settings.py
covers/spiders/: game_spider.py  team_spider.py
databall/: api.py  constants.py  data.py  database.py  database_builder.py  model_selection.py  player_stats.py  plotting.py  profit.py  simulate.py  stats.py  team_stats.py  types.py  util.py
databall/covers/: __init__.py  items.py  loaders.py  pipelines.py  settings.py
databall/db/: __init__.py  base.py  builder.py  columns.py  session.py  settings.py  urls.py
docs/: README.md  _config.yml  index.html  index.md  project_proposal.bib  project_proposal.tex
docs/_data/: navigation.yml
docs/_includes/: footer.html  head.html  navigation.html  sidebar.html
docs/_pages/: 404.md  background.md  covers.md  data-exploration.md  data-wrangling.md  feature-selection.md  future-work.md  model-performance.md  motivation.md  outline.md  parameter-tuning.md  performance-comparison.md  stats.md  team-season.md
docs/data/: stats.md
docs/introduction/: motivation.md
docs/results/: season.md
nba/: covers_scraper.py  database.py  database_builder.py  items.py  loaders.py  player_stats.py  settings.py  stats.py  team_stats.py
nba/spiders/: game_spider.py  team_spider.py
nbprocess/: README.md  nbprocess.py  nbprocess.yml  setup.py
notebooks/: data-exploration.ipynb  feature-selection.ipynb  inferential-statistics.ipynb  model-performance.ipynb  nba-stats.ipynb  nba_stats.ipynb  parameter-tuning.ipynb
report/: databall-slides.tex  databall.bib  project-proposal.tex
util/: nbprocess.py  nbprocess.yml
(+16 files in other folders)
