[project]
name = "databall"
version = "0.1.0"
description = "Betting on the NBA with data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nba-api>=1.5.2",
    "scrapy>=2.11.2",
    "sqlmodel>=0.0.22",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.tox]
legacy_tox_ini = """
[flake8]
ignore = B902,W503
max-line-length = 88
max-complexity = 15
select = B,C,E,F,W,T4,B9
"""

[tool.ruff]
line-length = 88
exclude = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
skip-magic-trailing-comma = true

[tool.uv]
package = false
dev-dependencies = [
    "ruff>=0.6.8",
]
